Fixed logo postionb on navbar for ipad
Fixed logo in navbar (experimental): was overlapping with "Home" on iPad in Landscape mode. Added padding on the right side of the logo.

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -944,7 +944,8 @@ html {
             height: calc(60 / 16 * 1rem);
             /* margin-right auto pushes everything away from it to the right */
             margin: 0 auto 0 0;
-            padding: 0;
+            //padding: 0;
+            padding: 0px 40px 0px 0px;
             display: flex;
             justify-content: center;
             align-items: center;
